// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeSummary should render closed trade correctly 1`] = `
<View
  style={
    [
      {
        "gap": 16,
      },
      {
        "gap": 32,
      },
    ]
  }
>
  <MatchCardCounterparty />
  <TradeInformation
    contract={
      {
        "canceled": true,
        "paymentConfirmed": null,
      }
    }
    view="buyer"
  />
  <TradeStuff
    contract={
      {
        "canceled": true,
        "paymentConfirmed": null,
      }
    }
  />
</View>
`;

exports[`TradeSummary should render open trade correctly 1`] = `
<View
  style={
    [
      {
        "gap": 16,
      },
      {
        "gap": 32,
      },
    ]
  }
>
  <MatchCardCounterparty />
  <TradeInformation
    contract={
      {
        "canceled": false,
        "paymentConfirmed": null,
      }
    }
    view="buyer"
  />
  <TradeStuff
    contract={
      {
        "canceled": false,
        "paymentConfirmed": null,
      }
    }
  />
</View>
`;

exports[`TradeSummary should render won dispute with outstanding action as seller correctly 1`] = `
<View
  style={
    [
      {
        "gap": 16,
      },
      {
        "gap": 32,
      },
    ]
  }
>
  <MatchCardCounterparty />
  <TradeInformation
    contract={
      {
        "canceled": true,
        "paymentConfirmed": null,
        "tradeStatus": "refundOrReviveRequired",
      }
    }
    view="seller"
  />
  <TradeStuff
    contract={
      {
        "canceled": true,
        "paymentConfirmed": null,
        "tradeStatus": "refundOrReviveRequired",
      }
    }
  />
</View>
`;
